--- a/case_study1_explore.Rmd
+++ b/case_study1_explore.Rmd
@@ -67,13 +67,13 @@ Missing data:
 State has 1 missing values, and it has wrong category "USA", so we also map to unknown
 City has 3126 missing values and duplicate entries as well as abbreviations, so we need to preprocess city(or just drop it). 
 source has 3695 missing values and messy website.
-Primary_Reason has 4754 missing values
+Primary_Reason has 4754 missing values # drop? over 60% missing
 
 Next step: preprocess these columns then use mice to impute missing values.
 
 ```{r}
 result <- df %>%
-  group_by(Primary_Reason) %>%
+  group_by(source) %>%
   summarise(Count = n()) %>%
   arrange(-Count)  # Sorting in descending order
 
@@ -154,7 +154,6 @@ df <- df %>%
   mutate(ppm = as.numeric(ppm), 
          price_date = mdy(price_date),
          year = year(price_date),
-         city = as.factor(city), 
          state = as.factor(state),
          country = as.factor(country),
          USA_region = as.factor(USA_region),
@@ -164,16 +163,8 @@ df <- df %>%
          )
 
 df$quarter = as.numeric(substr(df$yq_pdate, nchar(df$yq_pdate), nchar(df$yq_pdate)))
-
-df <- df %>% filter(year>=2010)
 ```
-
-```{r}
-table(df$source)
-table(df$state)
-table(df$USA_region)
-```
-
+### log transformation of ppm
 ```{r}
 # log ppm
 df$log_ppm <- log(df$ppm)
@@ -188,9 +179,54 @@ grid.arrange(hist_ppm, hist_log_ppm, ncol=2)
 df <- df %>% filter(ppm > 0)
 ```
 
+### year and quarter
+
+Do we need to include year or quarter?
+
+```{r}
+eda_year = ggplot(data = df %>% filter(year>2009), aes(x = year, y = log_ppm)) +
+  geom_point(size = 0.5, alpha = 0.5) +   
+  geom_line(size = 0.5, alpha = 0.2) +
+  geom_smooth( method = "loess", se = FALSE, size = 1.5) + 
+  labs(x = "Year",
+       y = "Log(ppm)")
+
+eda_quarter = ggplot(data = df %>% filter(year>2009), aes(x = quarter, y = log_ppm)) +
+  geom_point(size = 0.5, alpha = 0.5) +   
+  geom_line(size = 0.5, alpha = 0.2) +
+  geom_smooth( method = "loess", se = FALSE, size = 1.5) + 
+  labs(x = "Quarter",
+       y = "Log(ppm)")
+
+grid.arrange(eda_year, eda_quarter, ncol=2)
+```
+
+Year effect is not linear. Should consider year as a factor variable.
+
+Treat year as factor
+```{r}
+# year 
+# observations before 2010 are bare
+df <- df %>% filter(year>=2010)
+df$year <- as.factor(df$year)
+
+#quarter
+
+df$quarter <- as.factor(df$quarter)
+```
+
+```{r}
+table(df$source)
+table(df$state)
+table(df$USA_region)
+```
+
+
+
 ### Imputation
 
-We assume that the data is MAR, the next step is to build models to predict missing data from observed data.
+We assume that the data is MAR, the next step is to use MICE to impute missing data.
+
 One problem: city has over 50 categories and is messed up with duplicate and abbreviation, so here we will drop city and focus on factor variables: state, USA_region
 
 ```{r}
@@ -210,7 +246,7 @@ The typical sequence of steps to perform a multiple imputation analysis is:
 4) Optionally, compare pooled estimates from different scientific models by the D1() or D3() functions.
 ```{r}
 # multiple impute the missing values
-imp <- mice(df, seed = 1)
+imp <- mice(df,m =5, seed = 1)
 ```
 
 ### model selection
@@ -238,16 +274,15 @@ The  p-value is equal to 0.1354, so quarter is not needed in the model.
 summary(pool(fit.without))
 ```
 ```{r}
-histogram(~log_ppm|quarter,data = df)
+histogram(~log_ppm|state,data = df)
 ```
-
+need random effect
 
 
 
 
 ```{r}
 ### random intercept
-
 state_ppm <- ggplot(df, aes(x=log_ppm, y=reorder(state, state, length))) +
   geom_boxplot(outlier.size = 0.1) +
   labs(title="Log(ppm) by State", x = "Log(ppm)", y = "State")
@@ -259,9 +294,15 @@ usaregion_ppm <- ggplot(df, aes(x=log_ppm, y=reorder(USA_region, USA_region, len
 state_ppm
 usaregion_ppm
 ```
+
+use state as random intercept
+
 ```{r}
-fit <- with(imp, anova(lmer(log_ppm ~ year +  mgstr + bulk_purchase + source + (1|state)),
+#source
+fit <- with(imp, anova(lmer(log_ppm ~ year + mgstr + quarter + bulk_purchase  + (1|state)),
                                lmer(log_ppm ~ year + mgstr + quarter + bulk_purchase + source + (1|state))))
+
+summary(fit)
 #AIC
 mean(summary(fit)$AIC[c(1,3,5,7,9)])
 mean(summary(fit)$AIC[c(2,4,6,8,10)])
@@ -272,7 +313,44 @@ print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
 
 ```
 
+
 ```{r}
+#quarter
+fit <- with(imp, anova(lmer(log_ppm ~ year + mgstr + quarter + bulk_purchase + source + (1|state)),
+                               lm(log_ppm ~ year + mgstr + quarter + bulk_purchase + source + state)))
+
+summary(fit)
+#AIC
+mean(summary(fit)$AIC[c(1,3,5,7,9)])
+mean(summary(fit)$AIC[c(2,4,6,8,10)])
+
+#BIC
+print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
+print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
+
+```
+
+go random effect
+
+```{r}
+#quarter
+fit <- with(imp, anova(lmer(log_ppm ~ year +  mgstr + bulk_purchase + source + (1|state)),
+                               lmer(log_ppm ~ year + mgstr + quarter + bulk_purchase + source + (1|state))))
+
+summary(fit)
+#AIC
+mean(summary(fit)$AIC[c(1,3,5,7,9)])
+mean(summary(fit)$AIC[c(2,4,6,8,10)])
+
+#BIC
+print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
+print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
+
+```
+drop quarter
+
+```{r}
+#USA_region VS. state
 fit <- with(imp, anova(lmer(log_ppm ~ year +  mgstr + bulk_purchase + source + (1|state)),
                                lmer(log_ppm ~ year + mgstr  + bulk_purchase + source + (1|USA_region))))
 #AIC
@@ -284,10 +362,12 @@ print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
 print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
 
 ```
-use state as group factor
+use state as random intercept
 ```{r}
 fit <- with(imp, anova(lmer(log_ppm ~  mgstr + bulk_purchase + source + (1|state)),
                                lmer(log_ppm ~ year + mgstr  + bulk_purchase + source + (1|state))))
+
+
 #AIC
 mean(summary(fit)$AIC[c(1,3,5,7,9)])
 mean(summary(fit)$AIC[c(2,4,6,8,10)])
@@ -296,30 +376,12 @@ mean(summary(fit)$AIC[c(2,4,6,8,10)])
 print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
 print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
 
+summary(fit)
+
 ```
-need year factor
+Do we need year factor?
+Drop year
 
-
-
-```{r}
-eda_year = ggplot(data = df %>% filter(year>2009), aes(x = year, y = log_ppm)) +
-  geom_point(size = 0.5, alpha = 0.5) +   
-  geom_line(size = 0.5, alpha = 0.2) +
-  geom_smooth( method = "loess", se = FALSE, size = 1.5) + 
-  labs(x = "Year",
-       y = "Log(ppm)")
-
-eda_quarter = ggplot(data = df %>% filter(year>2009), aes(x = quarter, y = log_ppm)) +
-  geom_point(size = 0.5, alpha = 0.5) +   
-  geom_line(size = 0.5, alpha = 0.2) +
-  geom_smooth( method = "loess", se = FALSE, size = 1.5) + 
-  labs(x = "Quarter",
-       y = "Log(ppm)")
-
-grid.arrange(eda_year, eda_quarter, ncol=2)
-```
-
-Year effect is not linear. Should consider year as a factor variable.
 
 
 
@@ -369,8 +431,8 @@ ggplot(df, aes(x = bulk_purchase, y = log(ppm))) +
 ```
 
 ```{r}
-fit <- with(imp, anova(lmer(log_ppm ~  year + mgstr * bulk_purchase +  source + (1+ year|state)),
-                               lmer(log_ppm ~ year + mgstr *mgstr  + bulk_purchase + source + (1|state))))
+fit <- with(imp, anova(lmer(log_ppm ~    mgstr+bulk_purchase +  source + (1+mgstr|state) ),
+                               lmer(log_ppm ~   mgstr  + bulk_purchase + source + (1|state))))
 #AIC
 mean(summary(fit)$AIC[c(1,3,5,7,9)])
 mean(summary(fit)$AIC[c(2,4,6,8,10)])
@@ -379,10 +441,55 @@ mean(summary(fit)$AIC[c(2,4,6,8,10)])
 print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
 print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
 
+summary(fit)
+```
+```{r}
+fit <- with(imp, anova(lmer(log_ppm ~    mgstr+bulk_purchase +  source + (1+bulk_purchase+mgstr|state) ),
+                               lmer(log_ppm ~   mgstr  + bulk_purchase + source + (1+mgstr|state) )))
+#AIC
+mean(summary(fit)$AIC[c(1,3,5,7,9)])
+mean(summary(fit)$AIC[c(2,4,6,8,10)])
+
+#BIC
+print(mean(summary(fit)$BIC[c(1,3,5,7,9)]))
+print(mean(summary(fit)$BIC[c(2,4,6,8,10)]))
+summary(fit)
+```
+```{r}
+table(df$mgstr)
+```
+```{r}
+ggplot(df, aes(x = mgstr, y = log(ppm))) + 
+  geom_point() +
+  geom_smooth( method = "loess")
+```
+```{r}
+df$mgstr_factor <- as.factor(df$mgstr)
 ```
 
+```{r}
+# mgstr factor
+m1 <- lmer(formula = log_ppm ~ year +  mgstr + bulk_purchase + source + (1  | state), data=df)
+m2 <- lmer(formula = log_ppm ~ year +  mgstr_factor + bulk_purchase + source + (1  | state), data=df)
+
+anova(m1,m2)
+```
+```{r}
+# source 
+
+df <- df %>%
+  mutate(source = case_when(
+    is.na(source)  ~ "Unknown",
+    TRUE ~ source
+  ))
 
 
+
+m3 <- lmer(formula = log_ppm ~ year +  mgstr + bulk_purchase + (1  | state), data=df)
+m4 <- lmer(formula = log_ppm ~ year +  mgstr + bulk_purchase + source + (1  | state), data=df)
+
+anova(m3,m4)
+```
 
 ### Model Building & Model Selection
 
